se adicionan excepciones al domain y a infraestructure